# agent-input-sanitizer

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .template-sync-conflicts  .template-version  CHANGELOG.md  CLAUDE.md  README.md  THREAT-MODEL.md  eslint.config.mjs  package.json  pnpm-workspace.yaml  pyproject.toml
.claude/: settings.json
.claude/hooks/: lib-checks.sh  pre-push-check.sh  safe-launch.sh  session-setup.sh
.claude/skills/audit-and-parallelize/: SKILL.md
.github/: dependabot.yml  mutation-shards.json
.github/actions/setup-base-env/: action.yaml
.github/scripts/: aggregate-mutation.mjs  check-python-tag-version.sh  expand-shards.mjs  fetch-security-report.sh  format-autofix.sh  mutation-changed.sh  nightly-fuzz-issue.js  phone-home-extract.js  phone-home-submit.js  release-canary.sh  template-sync.sh  validate-config.sh  version-bump.sh
.github/workflows/: auto-version.yaml  build-publish-notify.yaml  dependabot-auto-merge.yaml  format-autofix.yaml  fuzz-nightly.yaml  gitleaks.yaml  hook-lifecycle.yaml  lint.yaml  mutation.yaml  node-tests.yaml  pack-smoke.yaml  phone-home.yaml  pre-commit.yaml  publish-python.yaml  release-canary.yaml  security-vulnerability-scan.yaml  supervision-gate.yaml  sync-required-checks.yaml  template-sync.yaml  validate-config.yaml  zizmor.yaml
.hooks/: commit-msg  lint-skills.sh  pre-commit  pre-push  run-ssot-guards.mjs  ssot-guard-pairs.json
changelog.d/: 15.security.md  16.changed.md
python/: README.md  pyproject.toml
python/agent_input_sanitizer/: __init__.py  invisible.py  textstrip.py
python/agent_input_sanitizer/data/: invisible-charset.json
python/agent_input_sanitizer/secrets/: daemon.py  detectors.py  engine.py  invisible.py
python/agent_input_sanitizer/secrets/data/: secret-detectors.json
scripts/: extract-js-regexes.mjs  gen-invisible-charset.mjs  gen-standardized-variants.mjs  promote-changelog.test.mjs  version-bump.test.mjs
src/: cf-charset.mjs  confusables.mjs  gates.mjs  html.mjs  index.mjs  instructions.mjs  invisible.mjs  layer1.mjs  output.mjs  prompt.mjs  rehydrate.mjs  standardized-variants.mjs  view-map.mjs
test/: aggregate-mutation.test.mjs  cli.test.mjs  confusables-property.test.mjs  confusables.test.mjs  exfil-property.test.mjs  gates-mutation-kill.test.mjs  golden-corpus.test.mjs  html-corpus.test.mjs  html-exfil-semantic-fuzz.test.mjs  html-property.test.mjs  html.test.mjs  instructions-mutation-kill.test.mjs  instructions-property.test.mjs  instructions-semantic-fuzz.test.mjs  instructions.test.mjs  invisible-charset.test.mjs  invisible-mutation-kill.test.mjs  invisible-property.test.mjs  invisible-semantic-fuzz.test.mjs  invisible.test.mjs  lazy-load.test.mjs  mutation-guards.test.mjs  mutation-shards.test.mjs  output-mutation-kill.test.mjs  output-property.test.mjs  output-semantic-fuzz.test.mjs  output.fuzz.test.mjs  output.test.mjs  package-exports.test.mjs  prompt-semantic-fuzz.test.mjs  prompt.test.mjs  real-redactor.mjs  rehydrate-mutation-kill.test.mjs  rehydrate-property.test.mjs  rehydrate-semantic-fuzz.test.mjs  rehydrate.test.mjs  sanitize.fuzz.test.mjs  sanitize.test.mjs  secret-detectors-portability.test.mjs  splice-property.test.mjs  (+3 more)
tests/: golden-corpus.json  golden.json  test_claude_hooks.py  test_fetch_security_report.py  test_gitleaks_allowlist.py  test_hook_fail_closed.py  test_phone_home_extract.py  test_python_client.py  test_redos_js_static_guard.py  test_required_env.py  test_template_sync.py  test_textstrip.py  test_validate_config.py
tests/secrets/: test_redos_static_guard.py  test_secrets_daemon.py  test_secrets_daemon_lifecycle.py  test_secrets_detectors.py  test_secrets_engine.py  test_secrets_invisible.py  test_secrets_isolation.py  test_secrets_js_portability.py
type-fixtures/consumer/: consumer.mts
