[project]
name = "agent-input-sanitizer"
version = "0.0.0"
requires-python = ">=3.10"

# detect-secrets + hypothesis back the agent_input_sanitizer.secrets test suite
# (the folded-in redaction engine). detect-secrets is the engine's only runtime
# dependency (shipped via the wheel's `[secrets]` extra), pulled in here so
# `uv run --extra dev pytest tests/` exercises the engine and its property tests.
[project.optional-dependencies]
# regexploit statically flags super-linear (ReDoS) regexes; the secrets ReDoS
# guard (tests/secrets/test_redos_static_guard.py) shells out to it.
dev = ["pytest>=7", "detect-secrets>=1.5.0", "hypothesis>=6", "regexploit>=1.0.0"]

[tool.ruff]
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "drift_guard: SSOT drift-guard contract tests that must never be silently skipped",
]
addopts = "--strict-markers"
