[project]
name = "agent-input-sanitizer"
version = "0.0.0"
requires-python = ">=3.10"

# detect-secrets + hypothesis back the agent_input_sanitizer.secrets test suite
# (the folded-in redaction engine). detect-secrets is the engine's only runtime
# dependency (shipped via the wheel's `[secrets]` extra), pulled in here so
# `uv run --extra dev pytest tests/` exercises the engine and its property tests.
[project.optional-dependencies]
# regexploit statically flags super-linear (ReDoS) regexes; the secrets ReDoS
# guard (tests/secrets/test_redos_static_guard.py) shells out to it.
# tomli backfills the stdlib `tomllib` (3.11+) on the 3.10 floor for the test
# suite; marker-gated so 3.11+ uses the stdlib and never installs it.
dev = [
    "pytest>=7",
    "detect-secrets>=1.5.0",
    "hypothesis>=6",
    "regexploit>=1.0.0",
    "tomli>=2 ; python_version < '3.11'",
]

[tool.ruff]
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "drift_guard: SSOT drift-guard contract tests that must never be silently skipped",
]
addopts = "--strict-markers"
