# Installable Python distribution for the agent-input-sanitizer client.
#
# The sanitization logic has a single source of truth: the JavaScript in `src/`.
# The wheel ships a self-contained, single-file BUILD of that CLI (src/ plus its
# npm deps bundled into one .mjs by `scripts/bundle-python-cli.mjs`) at
# `agent_input_sanitizer/_bundled/sanitize-cli.mjs`, so `pip install` plus
# Node.js (>=22) on PATH works with no separate JavaScript checkout. The bundle
# is a versioned artifact from src/ at one version — not a hand-maintained port,
# so it cannot drift. It is git-ignored and regenerated per release; the
# `artifacts` entry below force-includes it into the sdist/wheel. Before building
# locally, run `node scripts/bundle-python-cli.mjs` from the repo root; then
# `python -m build` (or `uv build`) from this `python/` directory.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-input-sanitizer"
# Versions the PYTHON CLIENT surface (this wrapper's API), NOT the npm release
# line. The two share a name but are published from different ecosystems and bump
# independently: the npm version is owned by the git-tag release workflow (the
# committed package.json "version" is intentionally frozen), while this is bumped
# by hand when the bridge's Python-visible API changes. So `pip install
# agent-input-sanitizer` and `npm i agent-input-sanitizer` will report different
# numbers — that is expected, not drift. Keep this a valid PEP 440 release; the
# guard in tests/test_python_version.py fails the build on a malformed edit.
version = "1.3.0"
description = "Python client for agent-input-sanitizer: a thin bridge to the Node.js CLI for byte-identical sanitization verdicts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["sanitizer", "prompt-injection", "unicode", "ansi", "security"]

[project.urls]
Homepage = "https://github.com/alexander-turner/agent-input-sanitizer"
Repository = "https://github.com/alexander-turner/agent-input-sanitizer"
Issues = "https://github.com/alexander-turner/agent-input-sanitizer/issues"

# The bundled CLI is git-ignored (a build artifact), so hatchling's VCS-aware
# file collection skips it by default. `artifacts` force-includes it into BOTH
# the sdist and the wheel — the release build regenerates it before packaging.
[tool.hatch.build]
artifacts = ["agent_input_sanitizer/_bundled/sanitize-cli.mjs"]

[tool.hatch.build.targets.wheel]
packages = ["agent_input_sanitizer"]

[tool.hatch.build.targets.sdist]
include = ["agent_input_sanitizer", "README.md"]
